--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/anankegit"]
-	path = themes/anankegit
-	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
+[submodule "themes/mini"]
+	path = themes/mini
+	url = https://github.com/nodejh/hugo-theme-mini.git
