--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -12,5 +12,6 @@ jobs:
       run: |
         git config --global user.name 'Hugo Build Action'
         git config --global user.email 'nivox@users.noreply.github.com'
-        git commit -am "Hugo Build"
+        git add public
+        git commit "Hugo Build"
         git push
