--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -13,5 +13,5 @@ jobs:
         git config --global user.name 'Hugo Build Action'
         git config --global user.email 'nivox@users.noreply.github.com'
         git add public
-        git commit "Hugo Build"
+        git commit -m "Hugo Build"
         git push
