--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -10,8 +10,12 @@ jobs:
         args: --minify --environment production
     - name: Push public site
       run: |
+        git checkout live
+        mv public /tmp/public
+        rm -rf *
+        mv /tmp/public/* .
         git config --global user.name 'Hugo Build Action'
         git config --global user.email 'nivox@users.noreply.github.com'
-        git add public
+        git add .
         git commit -m "Hugo Build"
         git push
