Fixed checkout of live branch

--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -10,7 +10,7 @@ jobs:
         args: --minify --environment production
     - name: Push public site
       run: |
-        git checkout live
+        git checkout -t origin/live
         mv public /tmp/public
         rm -rf *
         mv /tmp/public/* .
