--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -12,9 +12,9 @@ jobs:
       run: |
         git fetch
         git checkout live
-        mv public ${{runner.temp}}/public
+        cp -a public ${{runner.temp}}/public
         rm -rf *
-        mv /tmp/public/* .
+        cp -a /tmp/public/* .
         git config --global user.name 'Hugo Build Action'
         git config --global user.email 'nivox@users.noreply.github.com'
         git add .
