Trying to move the resource directory

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,8 @@ languageCode: en-us
 title: Nivox's Hub
 theme: mini
 
+resourceDir: /tmp/hugo-resources
+
 # Default content language, support en (English) / zh (Chinese) / nl (Dutch), default 'en'
 defaultContentLanguage: en
 
