--- a/.github/workflows/hugo-build.yml
+++ b/.github/workflows/hugo-build.yml
@@ -13,6 +13,7 @@ jobs:
         git fetch
         git checkout live
         rm -rf *
+        cp -a .hugo-build/* .
         git config --global user.name 'Hugo Build Action'
         git config --global user.email 'nivox@users.noreply.github.com'
         git add .
