--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ permalinks:
   posts: /posts/:title/
 
 googleAnalytics: G-0L37NV413T
-#disqusShortname: your-disqus-shortname
+disqusShortname: nivox-github-io
 
 # Hugo Configure Markup
 # More info: https://gohugo.io/getting-started/configuration-markup#
@@ -52,7 +52,7 @@ params:
   # To enable RSS, you could set `enableRSS: true`, default is `true`
   enableRSS: true
   # To enable comments, you may need to set `disqusShortname`
-  enableComments: false
+  enableComments: true
   # To enable comments, you may need to set `googleAnalytics`
   enableGoogleAnalytics: true
   # To enable table of content, you could set `showToc: true`, default is `false`
